# MIDORFEED

./: .gitignore  CMakeLists.txt  README.md  shit.txt
data/model/nanosuit/: nanosuit.mtl
data/scene/: DepthTest.scene  bloom.scene  earth.scene  hdr.scene  model.scene  simple.scene  transparent.scene
data/shader/: button.frag  configurablePostEffect.frag  configurablePostEffect.vert  default.frag  default.vert  defaultQuad.frag  defaultQuad.vert  explode.geom  geometryTest.geom  geometryTest.vert  hud.vert  noLighting.frag  noLighting.vert  outlineObject.frag  phoneLighting.frag  phoneLighting.vert  pos.vert  pos_st.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  test.frag  test.vert  text.frag  text.vert  visualizeDepthBuffer.frag  visualizeDepthBuffer.vert  visualizeNormal.frag  visualizeNormal.geom
include/Core/: Array.h  Bound.h  Camera.h  Geodetic.h  Matrix3.h  Matrix3f.h  Matrix4.h  Matrix4f.h  Node.h  NodeVisitor.h  Singleton.h  UsefulMarco.h  Utility.h  Vector2.cpp  Vector2.h  Vector2f.h  Vector2i.h  Vector3.cpp  Vector3.h  Vector3f.h  Vector3i.h  Vector4.cpp  Vector4.h  Vector4f.h  Vector4i.h  WindowEvent.h
include/CoreQt/: QtApplicationWindow.h  QtMainWindow.h  QtUtility.h  RenderSettingsLogic.cpp  RenderSettingsLogic.h  RenderSettingsWidget.h  mainwindow.h
include/GUI/: Button.h  Controller.h  ControllerMain.h  DtGuiManager.h  DtWindowResourceManager.h  FontManager.h  GuiManager.h  Label.h  MainWindow.h  Widget.h  Window.h  WindowEventHandler.h  WindowManager.h  WindowProcedure.h  WindowResource.h
include/MIDORFEED/: Application.h
include/Render/: Array.h  Bloom.h  BoxTessellator.h  Buffer.h  BufferObject.h  BufferObjectGL3X.h  Camera.h  ClearState.h  Context.h  Cube.h  Device.h  DisplayEngine.h  DrawState.h  Drawable.h  Ellipsoid.h  FrameBuffer.h  GLEWDevice.h  GLFWGraphicsWindow.h  GaussianBlur.h  Geometry.h  GeometryNode.h  GraphicsWindow.h  Image.h  ImageLayer.h  IndexBuffer.h  IndexBufferGL3X.h  IndexBufferObject.h  InstancedNode.h  Light.h  MainWindow.h  Map.h  Material.h  Mesh.h  Model.h  Node.h  OpenGLContext.h  OpenGLDefines.h  PostProcessor.h  PostProcessorManager.h  Primitives.h  (+29 more)
libs/freeImage/lib/Debug/: FreeImaged.lib
libs/glew/lib/Debug/: glew32sd.lib
libs/glew/lib/Release/: glew32s.lib
libs/glfw/lib/Debug/: glfw3.lib
libs/glfw/lib/RelWithDebInfo/: glfw3.lib
libs/glfw/lib/Release/: glfw3.lib
src/App/: main.cpp  main.cxx
src/Core/: Array.cxx  Bound.cpp  Geodetic.cpp  Matrix3.cpp  Matrix3.cxx  Matrix3f.cpp  Matrix4.cxx  Matrix4f.cpp  Node.cpp  Node.cxx  NodeVisitor.cpp  NodeVisitor.cxx  Utility.cpp  Vector2.cpp  Vector2f.cpp  Vector3.cpp  Vector3.cxx  Vector3f.cpp  Vector4.cpp  Vector4.cxx  Vector4f.cpp  WindowEvent.cpp
src/CoreQt/: QtApplicationWindow.cxx  QtMainWindow.cxx  RenderSettingsLogic.cxx  RenderSettingsWidget.cxx  mainwindow.cpp  mainwindow.ui
src/GUI/: Button.cpp  Controller.cpp  ControllerMain.cpp  DtGuiManager.cpp  FontManager.cpp  GuiManager.cpp  Label.cpp  MainWindow.cpp  Widget.cpp  Window.cpp  WindowEventHandler.cpp  WindowManager.cpp  WindowProcedure.cpp  WindowResource.cpp
src/MIDORFEED/: Application.cxx  main.cxx
src/Render/: Array.cpp  Array.cxx  Bloom.cpp  Buffer.cxx  BufferObject.cpp  BufferObject.cxx  BufferObjectGL3X.cxx  Camera.cpp  Camera.cxx  ClearState.cpp  ClearState.cxx  Context.cxx  Cube.cxx  Device.cxx  DisplayEngine.cpp  DrawState.cpp  DrawState.cxx  Drawable.cpp  Drawable.cxx  Ellipsoid.cpp  FrameBuffer.cpp  FrameBuffer.cxx  GLEWDevice.cxx  GLFWGraphicsWindow.cxx  GaussianBlur.cpp  Geometry.cpp  Geometry.cxx  GraphicsWindow.cxx  Image.cpp  Image.cxx  ImageLayer.cpp  IndexBuffer.cxx  IndexBufferGL3X.cxx  IndexBufferObject.cxx  InstancedNode.cpp  Light.cpp  Light.cxx  MainWindow.cpp  MainWindow.cxx  Map.cpp  (+60 more)
third/glew-2.1.0/lib/Debug/Win32/: glew32sd.lib
third/glew-2.1.0/lib/Debug/x64/: glew32sd.lib
